--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "updates": "ncu -u"
   },
   "devDependencies": {
-    "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.5.1",
-    "standard-version": "^9.3.2",
-    "npm-check-updates": "^12.1.0"
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "npm-check-updates": "^16.7.10",
+    "prettier": "^2.8.4",
+    "standard-version": "^9.5.0"
   }
 }
